--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -16,6 +16,7 @@ html {
   overflow-x: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  touch-action: manipulation;
 }
 
 a {
